# source

./: CMakeLists.txt
libs/common/SDL2/include/SDL2/: SDL_opengles2_gl2.h  SDL_rect.h
shaders/: convertio.py  d.py  temp.py  translate.py
shaders/base/: frag.frag  ms.frag  ms.vert  skybox.frag  skybox.vert  vert.vert
shaders/base/light/: frag.frag  vert.vert
shaders/gui/: frag.frag  vert.vert
shaders/gui/colored/: frag.frag  vert.vert
shaders/gui/font/: frag.frag  vert.vert
source/: main.cpp  textures  vectors.h
source/geometry/: Mesh.h  mesh_objects.cpp  mesh_objects.h
source/graphics/: bitmap.cpp  bitmap.h  gl_glob.h  gl_help.h  gl_init.h  render.cpp  render.h  shader.cpp  shader.h
source/graphics/textures/: bmp.cpp  skybox.cpp  texture.cpp  textures.h
source/ie/: objload.h
source/iomanager/: iomanager.cpp
source/math/: matrix_math.h
textures/: py.xcf  share-3163381404
